<resources>
    <string name="app_name">Medicine Diary</string>
    <string name="splash_name">Medicine\nDiary</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_item_add_illness">Add Illness</string>
    <string name="tap_on_guide">Tap on \" + \" to add your illness</string>
    <string name="illness_item_text"><![CDATA[< Illness >]]></string>
    <string name="hint_illness">Enter Your Illness</string>
    <string name="cancel_button">Cancel</string>
    <string name="submit_button">Submit</string>
    <string name="medicine_name_here"><![CDATA[<Medicine Name Here>]]></string>
    <string name="expiry_date"><![CDATA[<Expiry Date>]]></string>
    <string name="hint_medicine_name">Enter medicine name</string>
    <string name="hint_expiry_date">Enter expiry date</string>
    <string name="about_text">Medicine Diary is a digital diary created to help you store important information regarding your medicines which you take on the daily basis.\n\nYou can now carry medicine\'s name, its expiry date,etc in your pocket!</string>

</resources>