<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="illnessViewModel"
            type="com.example.medicinediary.illness.IllnessViewModel" />
    </data>
<androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_illness_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    app:cardCornerRadius="4dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/recycler_view_illness"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/enter_illness"
            android:layout_width="242dp"
            android:layout_height="55dp"
            android:autofillHints="@string/hint_illness"
            android:gravity="center|start"
            android:hint="@string/hint_illness"
            android:inputType="textShortMessage|text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.406" />

        <Button
            android:id="@+id/submit_illness_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryDarkColor"
            android:text="@string/submit_button"
            android:textColor="#FFFFFF"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancel_illness_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_illness_button"
            android:onClick="@{()-> illnessViewModel.onSubmitEntry()}"/>

        <Button
            android:id="@+id/cancel_illness_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:backgroundTint="@color/primaryDarkColor"
            android:text="@string/cancel_button"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/submit_illness_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_illness" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

</layout>